--- a/src/app/features/admin/dashboard/components/order-card/order-card.component.html
+++ b/src/app/features/admin/dashboard/components/order-card/order-card.component.html
@@ -2,22 +2,26 @@
   <div class="order-header">
     <div class="order-number">
       <mat-icon>phone</mat-icon>
-      <span>{{order.phone}}</span>
+      <span>{{ order.phone }}</span>
     </div>
-    <div class="order-count" *ngIf="order.orderCount">{{order.orderCount}}</div>
+    <div class="order-count" *ngIf="orderCount">{{ orderCount }}</div>
   </div>
-  
+
   <div class="order-content">
     <div class="client-info">
-      <div class="client-name">{{order.clientName}}</div>
-      <div class="client-address">{{order.address}}</div>
-      <div class="client-notes">{{order.notes}}</div>
+      <div class="client-name">{{ order.clientName }}</div>
+      <div class="client-address">{{ order.address }}</div>
+      <div class="client-notes">{{ order.observaciones }}</div>
     </div>
   </div>
 
   <div class="order-meta">
-    <div class="order-date">{{order.date}}</div>
-    <div class="order-status">N - 1, 25</div>
+    <div class="order-date">
+      {{ order.entrada | date:'short' }}
+    </div>
+    <div class="order-status">
+      {{ order.estado }}
+    </div>
   </div>
 
   <button class="action-button" (click)="onAddProgress()">
