--- a/src/app/features/clients/components/client-form/client-form.component.html
+++ b/src/app/features/clients/components/client-form/client-form.component.html
@@ -29,78 +29,24 @@
     </div>
 
     <div class="form-row">
-      <mat-form-field appearance="outline" class="full-width">
-        <mat-label>Dirección</mat-label>
-        <input matInput formControlName="domicilio" placeholder="Dirección completa">
-        <mat-error *ngIf="clientForm.get('domicilio')?.errors?.['required']">
-          La dirección es requerida
-        </mat-error>
-      </mat-form-field>
-    </div>
-
-    <div class="form-row">
-      <mat-form-field appearance="outline" class="full-width">
-        <mat-label>Observaciones</mat-label>
-        <textarea matInput formControlName="observaciones" placeholder="Detalles adicionales del cliente"></textarea>
-      </mat-form-field>
-    </div>
-
-    <div class="form-row">
       <mat-form-field appearance="outline">
         <mat-label>Zona</mat-label>
-        <mat-select formControlName="zona">
-          <mat-option value="zona-14-id">Zona 14</mat-option>
+        <mat-select formControlName="idZona" required>
+          <mat-option *ngFor="let zona of zonas" [value]="zona.idZona">
+            {{ zona.zona }}
+          </mat-option>
         </mat-select>
-        <mat-error *ngIf="clientForm.get('zona')?.errors?.['required']">
+        <mat-error *ngIf="clientForm.get('idZona')?.errors?.['required']">
           La zona es requerida
         </mat-error>
       </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label>Tipo de Botellón</mat-label>
-        <mat-select formControlName="tipoBotellon">
-          <mat-option value="Grande">Grande</mat-option>
-          <mat-option value="Pequeño">Pequeño</mat-option>
-        </mat-select>
-        <mat-error *ngIf="clientForm.get('tipoBotellon')?.errors?.['required']">
-          El tipo de botellón es requerido
-        </mat-error>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Tipo de Cliente</mat-label>
-        <mat-select formControlName="tipoCliente">
-          <mat-option value="Bueno">Bueno</mat-option>
-          <mat-option value="Regular">Regular</mat-option>
-          <mat-option value="Malo">Malo</mat-option>
-        </mat-select>
-        <mat-error *ngIf="clientForm.get('tipoCliente')?.errors?.['required']">
-          El tipo de cliente es requerido
-        </mat-error>
-      </mat-form-field>
-    </div>
-
-    <div class="form-row">
       <mat-form-field appearance="outline">
         <mat-label>¿Alerta?</mat-label>
         <mat-select formControlName="alerta">
           <mat-option [value]="true">Sí</mat-option>
           <mat-option [value]="false">No</mat-option>
         </mat-select>
-        <mat-error *ngIf="clientForm.get('alerta')?.errors?.['required']">
-          Este campo es requerido
-        </mat-error>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Cantidad de Llamadas</mat-label>
-        <input matInput type="number" formControlName="cantLlamadas" min="0">
-        <mat-error *ngIf="clientForm.get('cantLlamadas')?.errors?.['required']">
-          Este campo es requerido
-        </mat-error>
-        <mat-error *ngIf="clientForm.get('cantLlamadas')?.errors?.['min']">
-          Debe ser 0 o más
-        </mat-error>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
@@ -113,29 +59,58 @@
     </div>
 
     <div class="form-row">
-      <mat-form-field appearance="outline">
-        <mat-label>Latitud de Entrega</mat-label>
-        <input matInput type="number" formControlName="latitudEntrega" step="any">
-        <mat-error *ngIf="clientForm.get('latitudEntrega')?.errors?.['required']">
-          La latitud es requerida
-        </mat-error>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Longitud de Entrega</mat-label>
-        <input matInput type="number" formControlName="longitudEntrega" step="any">
-        <mat-error *ngIf="clientForm.get('longitudEntrega')?.errors?.['required']">
-          La longitud es requerida
-        </mat-error>
-      </mat-form-field>
-
       <mat-form-field appearance="outline" class="full-width">
-        <mat-label>Link del Mapa</mat-label>
-        <input matInput formControlName="linkMaps" placeholder="https://www.google.com/maps?q=...">
-        <mat-error *ngIf="clientForm.get('linkMaps')?.errors?.['pattern']">
-          El link no tiene un formato válido
-        </mat-error>
+        <mat-label>Observaciones</mat-label>
+        <textarea matInput formControlName="observaciones" placeholder="Detalles adicionales del cliente"></textarea>
       </mat-form-field>
+    </div>
+
+    <div formArrayName="ubicaciones" class="ubicaciones-container">
+      <div *ngFor="let ubicacion of ubicacionesArray.controls; let i = index" [formGroupName]="i" class="ubicacion-item">
+        <h3>Ubicación {{ i + 1 }}</h3>
+        <div class="form-row">
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Descripción</mat-label>
+            <input matInput formControlName="descripcion" placeholder="Ej: Casa, Trabajo, etc.">
+            <mat-error *ngIf="ubicacion.get('descripcion')?.errors?.['required']">
+              La descripción es requerida
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="form-row">
+          <mat-form-field appearance="outline">
+            <mat-label>Latitud</mat-label>
+            <input matInput type="number" formControlName="latitud" step="any">
+            <mat-error *ngIf="ubicacion.get('latitud')?.errors?.['required']">
+              La latitud es requerida
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Longitud</mat-label>
+            <input matInput type="number" formControlName="longitud" step="any">
+            <mat-error *ngIf="ubicacion.get('longitud')?.errors?.['required']">
+              La longitud es requerida
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="form-row">
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Enlace de Google Maps</mat-label>
+            <input matInput formControlName="linkMaps" placeholder="https://maps.app.goo.gl/...">
+          </mat-form-field>
+        </div>
+        <div class="form-actions">
+          <button mat-button type="button" color="warn" (click)="removeUbicacion(i)" *ngIf="ubicacionesArray.length > 1">
+            <mat-icon>delete</mat-icon> Eliminar Ubicación
+          </button>
+        </div>
+      </div>
+      <div class="form-actions">
+        <button mat-button type="button" color="primary" (click)="addUbicacion()">
+          <mat-icon>add_location</mat-icon> Agregar Otra Ubicación
+        </button>
+      </div>
     </div>
 
     <div class="form-actions">
