--- a/src/app/features/zonas/components/zona-edit/zona-edit.component.html
+++ b/src/app/features/zonas/components/zona-edit/zona-edit.component.html
@@ -3,31 +3,33 @@
 
   <mat-dialog-content>
   <form [formGroup]="zonaForm">
-    <div class="form-row">
+    <div *ngIf="!isNew" class="form-row">
       <div class="form-field">
         <mat-form-field appearance="outline">
-          <mat-label>ID</mat-label>
-          <input matInput type="text" formControlName="id" readonly>
-        </mat-form-field>
-      </div>
-
-      <div class="form-field">
-        <mat-form-field appearance="outline">
-          <mat-label>Número de Zona</mat-label>
-          <input matInput type="number" formControlName="zona">
+          <mat-label>ID de Zona</mat-label>
+          <input matInput type="text" [value]="zonaForm.get('idZona')?.value" readonly>
         </mat-form-field>
       </div>
     </div>
 
-    <mat-form-field class="full-width" appearance="outline">
-      <mat-label>Descripción</mat-label>
-      <textarea matInput formControlName="descripcion" rows="3"></textarea>
-    </mat-form-field>
+    <div class="form-row">
+      <div class="form-field">
+        <mat-form-field appearance="outline">
+          <mat-label>Nombre de la Zona</mat-label>
+          <input matInput type="text" formControlName="zona" required>
+          <mat-error *ngIf="zonaForm.get('zona')?.hasError('required')">
+            El nombre de la zona es requerido
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
 
-    <mat-form-field class="full-width" appearance="outline">
-      <mat-label>Activa</mat-label>
-      <input matInput [value]="zonaForm.get('activa')?.value ? 'Sí' : 'No'" readonly>
-    </mat-form-field>
+    <div class="form-row">
+      <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Descripción</mat-label>
+        <textarea matInput formControlName="descripcion" rows="3"></textarea>
+      </mat-form-field>
+    </div>
   </form>
 
   </mat-dialog-content>
